--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^17.3.1",
+    "@angular/common": "^17.3.1",
+    "@angular/compiler": "^17.3.1",
+    "@angular/core": "^17.3.1",
+    "@angular/forms": "^17.3.1",
+    "@angular/platform-browser": "^17.3.1",
+    "@angular/platform-browser-dynamic": "^17.3.1",
+    "@angular/router": "^17.3.1",
     "@sanity/client": "^6.15.7",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.36.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular-devkit/build-angular": "^17.3.2",
+    "@angular/cli": "~17.3.2",
+    "@angular/compiler-cli": "^17.3.1",
     "@types/jasmine": "~4.3.0",
     "@types/progress-stream": "^2.0.5",
     "autoprefixer": "^10.4.18",
@@ -39,6 +40,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "~5.0.2"
+    "typescript": "~5.4.3"
   }
 }
