--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "_enabledBlockTypes": ["if","for","switch","defer"]
   }
 }
